2017-11-28  Keith Marshall  <keith@users.osdn.me>

	Handle indeterminate FLT_EVAL_METHOD; fix issue [#2352].

	* include/math.h [FLT_EVAL_METHOD == 0 || FLT_EVAL_METHOD == 1]
	(float_t, double_t): Define them explicitly, as appropriate for each
	of these two specific cases only; otherwise, define them as if for...
	[FLT_EVAL_METHOD == 2]: ...this explicit case, but also apply it as a
	suitable default compromise for the indeterminate case, in which...
	[FLT_EVAL_METHOD != 2]: ...emit indeterminacy warning.

2017-10-25  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Include, and make <sys/bsdtypes.h> test suite safe.

	* tests/headers.at (sys/bsdtypes.h): Add reference.

	* include/sys/bsdtypes.h [__IN_MINGWRT_TESTSUITE__]: Add to...
	[_BSD_SOURCE || _WINSOCK2_H]: ...these, as conditions for supression
	of "ill-advised usage" warning message.

2017-09-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Factor <sys/time.h> duplicate content out of winsock headers.

	* include/sys/time.h: Assert copyright; tidy layout.
	[_BEGIN_C_DECLS, _END_C_DECLS]: Use them to avoid C++ name mangling.
	[__WINSOCK_H_SOURCED__] (_SYS_TIME_H): Do not define it; hence...
	[!defined _SYS_TIME_H]: ...selectively expose definitions for only...
	(timerclear, timerisset, timercmp): ...these functional macros, and...
	(struct timeval): ...this data type; inhibit redefinition on...
	[defined _SYS_TIME_H && _WINSOCK_H]: ...second reading.
	(_TIMEVAL_DEFINED): Do not define; it isn't required.

2017-09-09  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Factor BSD non-standard type definitions into common header.

	* profile/gmon.h [_BSDTYPES_DEFINED]: Delete block; include...
	* include/sys/bsdtypes.h: ...this new file instead; it defines...
	(u_char, u_int, u_long, u_short): ...these non-standard data types.

	* profile/gmon.c profile/mcount.c [_BSD_SOURCE]: Declare it;
	it suppresses warnings from <sys/bsdtypes.h>, about ill-advised
	non-standard BSD typedef usage.
